# Openenv_email

./: Dockerfile  app.py  inference.py  openenv.yaml  pyproject.toml  readme.md  test_environment.py  validate_hackathon_requirements.py
data/: emails.json  emails_1.json  prepare_data.py
env/: __init__.py  config.py  environment.py  graders.py  models.py  reward.py  tasks.py
server/: app.py
